[gd_scene load_steps=6 format=3 uid="uid://bte60ddj418ss"]

[ext_resource type="PackedScene" uid="uid://cfxyt4ds50804" path="res://battle/ui/player_hud.tscn" id="1_m88t5"]
[ext_resource type="Script" path="res://battle/ui/battle_ui.gd" id="1_yq6lc"]
[ext_resource type="PackedScene" uid="uid://b11wr6262jxgm" path="res://battle/ui/command_window.tscn" id="2_j82m1"]
[ext_resource type="PackedScene" uid="uid://8mmvb346f7pf" path="res://ui/dialogue/dialogue_window.tscn" id="3_1s2h0"]
[ext_resource type="PackedScene" uid="uid://h1hhhv63dbcv" path="res://ui/spells/spell_window.tscn" id="5_bkogb"]

[node name="BattleUI" type="CanvasLayer"]
script = ExtResource("1_yq6lc")
low_health_color = Color(1, 0.458824, 0.380392, 1)

[node name="VisualsParent" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerHud" parent="VisualsParent" instance=ExtResource("1_m88t5")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 16.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -16.0

[node name="CommandWindow" parent="VisualsParent" instance=ExtResource("2_j82m1")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 96.0
offset_top = 8.0
offset_right = 56.0
offset_bottom = -32.0

[node name="DialogueWindow" parent="VisualsParent" instance=ExtResource("3_1s2h0")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 32.0
offset_top = 136.0
offset_right = -8.0
offset_bottom = 96.0

[node name="SpellWindow" parent="VisualsParent" instance=ExtResource("5_bkogb")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 145.0
offset_top = 24.0
offset_right = 105.0
offset_bottom = -16.0
